--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/filters/words.js"></script>
+        <script src="scripts/directives/ngenter.js"></script>
         <!-- endbuild -->
 </body>
 </html>
